2002-06-06  jacob berkman  <jacob@ximian.com>

	* IDL.h.new.in: 
	* configure.in: use %q rather than %ll on bsd (fixes bug #80439)

2002-06-03  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 0.8.0.

2002-03-28  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: link against glib. (75701)

2002-03-01  jacob berkman  <jacob@ximian.com>

	* Makefile.am (EXTRA_DIST): remove stamp-parser as this is broken

	* autogen.sh: call automake with --copy

2002-02-04  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 0.7.4.

2002-02-04  Shivram U <shivaram.upadhyayula@wipro.com>

	reviewed by: Mark McLoughlin  <mark@skynet.ie>

	* parser.y:
	* util.c: remove deprecated glib functions.
	s/g_string_sprintf/g_string_printf/ and
	s/g_strcasecmp/g_ascii_strcasecmp/.

2002-01-28  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 0.7.3.

2002-01-17  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add spec file to EXTRA_DIST.

2002-01-11  Fabrice <fabrice@gnu.org>

	reviewed by: Mark McLoughlin  <mark@skynet.ie>

	* lexer.l: gcc 3.0 update.

2002-01-09  Michael Meeks  <michael@ximian.com>

	* Version 0.7.2

2002-01-03  Mark McLoughlin  <mark@skynet.ie>

	* lexer.l: lame workaround for FreeBSD bug.

2001-10-16  Ross Golder  <rossg@durban.golder.org>

	* libIDL.spec.in: Updated filenames/paths for libIDL2.

2001-10-05  Abel Cheung  <maddog@linux.org.hk>

	* libIDL-config.in: Fix output of --version and --cflags.

2001-09-26  Mark McLoughlin <mark@skynet.ie>

	* configure.in: add --enable-compile-warnings option.

	* Makefile.am: use WARN_CFLAGS.

2001-09-25  Mark McLoughlin <mark@skynet.ie>

	* Version 0.7.1.

2001-09-24  Mark McLoughlin <mark@skynet.ie>

	* configure.in: cleanup libtool versioning. Add
	ACLOCAL_FLAGS caching. Use pkg-config to check for
	libs.

	* libIDL-2.0.pc.in, libIDL.spec.in, Makefile.am, 
	  Makefile.msc.in, util.c: update.

	* IDL.h.new.in (LIBIDL_VERSION): rename to 
	LIBIDL_GEN_VERSION.
